# pearce-planner

./: .gitignore  DEPLOY.md  Plan.md  README.md
backend/: .dockerignore  Dockerfile  README.md  fly.toml  pyproject.toml  requirements.txt  start.sh
backend/app/: __init__.py  csv_loader.py  main.py  models.py  scheduler.py  settings.py
backend/data/: labour_requirements.csv  orders.csv  settings.csv  workers.csv
backend/tests/: test_scheduler.py
frontend/: .dockerignore  Dockerfile  README.md  fly.toml  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: BalerSelector.tsx  CapacityTable.tsx  CurrentOrdersTable.tsx  DataTables.tsx  ScheduleResult.tsx  ScheduleTable.tsx
frontend/src/lib/: api.ts  types.ts
